improve discovered attack impact